<resources>
    <string name="app_name">Kültür Sanat</string>
    <string name="main_screen">Ana sayfa</string>
    <string name="splash_screen">Kültür Sanat</string>
    <string name="cinema_screen">Sinema ekranı</string>
    <string name="movie_seats_screen">Film Koltukları</string>
    <string name="movie_times_screen">Film Saatleri</string>
    <string name="movies_screen">Filmler ekranı</string>
    <string name="profile_screen">Profil ekranı</string>
    <string name="sign_up_screen">Kayıt ekranı</string>
    <string name="summary_and_confirmation_screen">Özet ve Onaylama</string>

    <string name="logout_button_text">Çıkış Yap</string>


    <string name="theatres_screen">Mevcut Tiyatrolar</string>
    <string name="theatre_screen">Tiyatro ekranı</string>
    <string name="tiyatrolara_git">Tiyatrolara git</string>
    <string name="tiyatroya_git">Tiyatro Seç</string>
    <string name="profile_git">Profile Git</string>
    <string name="ozet_onaya_git">Onaylama ekranına git</string>
    <string name="koltuk1_seç">1</string>
    <string name="koltuk2_seç">2</string>
    <string name="koltuk_secmeye_git">Koltuk Seç</string>
    <string name="theatre_seats_screen">Tiyatro Koltukları</string>
    <string name="theatre_times_screen">Tiyatro Saatleri</string>
    <string name="tiyatro1_saat1_seç">19:00</string>
    <string name="tiyatro1_saat2_seç">20:00</string>
    <string name="tiyatro2_saat1_seç">19:00</string>

    <string name="tiyatro2_saat2_seç">20:00</string>
    <string name="kayıt_edildi">Kayıt Edildi!</string>
    <string name="adSoyad">Ad Soyad:</string>
    <string name="login_edildi">Login edildi!</string>
    <string name="username_login_textview">Kullanıcı Adı</string>
    <string name="password_login_textview">Şifre</string>
    <string name="nameSurname_signup_textview">AdSoyad</string>
    <string name="password_signup_textview">Şifre</string>
    <string name="username_signup_textview">Kullanıcı Adı</string>

    <string name="username_summary_textview">Kullanıcı Adı</string>
    <string name="movie_summary_textview">Seans</string>
    <string name="seat_summary_textview">Koltuk</string>
    <string name="sinemaya_git">Sinemaya git</string>
    <string name="maine_git">Ana sayfaya git</string>
    <string name="onay_yap">Bileti onayla ve ana menüye dön</string>
    <string name="çıkış_yap">Çıkış yap</string>
    <string name="sinema_tarihine_git">Tarihe-Zaman seç</string>
    <string name="login_yap">Giriş</string>
    <string name="signup_yap">Kaydol</string>
    <string name="ana_sayfaya_git">Sadece bakınıyorum</string>
    <string name="film_saatlerine_git">Film Saatleri</string>
    <string name="logine_git">Login sayfasına git</string>
    <string name="signupa_git">Sign-up sayfasına git</string>
    <string name="tiyatro1_seç">Tiyatro 1</string>


    <string name="film1_seans1e_git">Film1 Seans1</string>
    <string name="film1_seans2ye_git">Film1 Seans2</string>
    <string name="film2_seans1e_git">Film2 Seans1</string>
    <string name="film2_seans2ye_git">Film2 Seans2</string>

    <string name="film_koltuk_1">1</string>
    <string name="film_koltuk_2">2</string>
    <string name="film_koltuk_3">3</string>
    <string name="film_koltuk_4">4</string>
    <string name="film_koltuk_5">5</string>
    <string name="film_koltuk_6">6</string>
    <string name="film_koltuk_7">7</string>
    <string name="film_koltuk_8">8</string>
    <string name="film_koltuk_9">9</string>

    <string name="show_user">%s</string>
    <string name="show_movie">Etkinlik: %s</string>
    <string name="show_seat">Koltuk: %s</string>

    <string name="sorgu_yap">Giriş</string>


</resources>