<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:theme="@style/Theme.KulturSanat.Fullscreen">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:text="@string/cinema_screen"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_film1_seans1e_git"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/film1_seans1e_git" />

        <Button
            android:id="@+id/button_film1_seans2ye_git"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/film1_seans2ye_git" />
        <Button
            android:id="@+id/button_film2_seans1e_git"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/film2_seans1e_git" />
        <Button
            android:id="@+id/button_film2_seans2ye_git"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/film2_seans2ye_git" />



    </LinearLayout>

</FrameLayout>