<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:theme="@style/Theme.KulturSanat.Fullscreen">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/theatre_times_screen"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_koltuk_1_seç"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/tiyatro1_saat1_seç" />

        <Button
            android:id="@+id/button_koltuk2_seç"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/tiyatro1_saat2_seç" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_koltuk_secmeye_git"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/koltuk_secmeye_git" />


    </LinearLayout>

</FrameLayout>