<?xml version="1.0" encoding="utf-8"?>
<!-- res/drawable/button_background.xml -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kullanıcı Adı" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Şifre" />

        <Button
            android:id="@+id/button_login_yap"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/login_yap" />

        <TextView
            android:id="@+id/button_signup_yap"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/signup_yap"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_logined"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/login_edildi"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/username_signup_textview"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/password_signup_textview"
            android:textSize="30sp" />

    </LinearLayout>

</FrameLayout>